discussion/kv_engine/153753/153753_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Merge commit 'refs/changes/65/153365/1' of http://review.couchbase.org/kv_engine into local

Change-Id: Id7c61154ed677732a9b398881cf8552ba77ae3bd

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Scott Lashley
Date: 2021-05-17 23:11:06.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-05-18 00:48:02.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8978/ : FAILURE

<p>clang-tidy suggested the following changes:
<pre>

cat &lt;&lt;&quot;EOF&quot; | patch -p1
diff --git a/engines/ep/src/magma-kvstore/magma-kvstore.h b/engines/ep/src/magma-kvstore/magma-kvstore.h
index 738cb4126..8905aba9c 100644
--- a/engines/ep/src/magma-kvstore/magma-kvstore.h
+++ b/engines/ep/src/magma-kvstore/magma-kvstore.h
@@ -160,7 +160,7 @@ struct MagmaKVStoreTransactionContext : public EPTransactionContext {
         : EPTransactionContext(stats, vb) {
     }
 
-    bool supportsConcurrentTxns() const {
+    bool supportsConcurrentTxns() const override {
         return true;
     }
 
EOF

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8978/ )

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.h:163:10: warning: annotate this function with "override" or (rarely) "final" [modernize-use-override]
    bool supportsConcurrentTxns() const {
         ^
                                        override
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore.h:163:40: note: FIX-IT applied suggested code changes
    bool supportsConcurrentTxns() const {
                                       ^
clang-tidy suggested the following changes:

cat &lt;&lt;&quot;EOF&quot; | patch -p1
diff --git a/engines/ep/src/magma-kvstore/magma-kvstore.h b/engines/ep/src/magma-kvstore/magma-kvstore.h
index 738cb4126..8905aba9c 100644
--- a/engines/ep/src/magma-kvstore/magma-kvstore.h
+++ b/engines/ep/src/magma-kvstore/magma-kvstore.h
@@ -160,7 +160,7 @@ struct MagmaKVStoreTransactionContext : public EPTransactionContext {
         : EPTransactionContext(stats, vb) {
     }
 
-    bool supportsConcurrentTxns() const {
+    bool supportsConcurrentTxns() const override {
         return true;
     }
 
EOF

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/8978/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/35832/ : FAILURE

Failure of GoogleTest "TransportProtocols/SaslTest.CollectionsConnectionSetup/Mcbp":

<pre>
[ RUN      ] TransportProtocols/SaslTest.CollectionsConnectionSetup/Mcbp
..\kv_engine\tests\testapp\testapp_sasl.cc(325): error: Expected equality of these values:
  cb::mcbp::Status::NotMyVbucket
    Which is: I"m not responsible for this vbucket
  getRsp.getStatus()
    Which is: Not found
[  FAILED  ] TransportProtocols/SaslTest.CollectionsConnectionSetup/Mcbp, where GetParam() = Mcbp (101 ms)
TransportProtocols/SaslTest.CollectionsConnectionSetup/Mcbp
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/35832/ )

Timeout of a CTest test 406/406 Test #403: cluster_test ..................................................................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/35832/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/10531/ : FAILURE

Failure of GoogleTest "TransportProtocols/SaslTest.CollectionsConnectionSetup/Mcbp":

<pre>
[ RUN      ] TransportProtocols/SaslTest.CollectionsConnectionSetup/Mcbp
[2021-05-17T23:22:59.921Z] ../kv_engine/tests/testapp/testapp_sasl.cc:325: Failure
[2021-05-17T23:22:59.921Z] Expected equality of these values:
[2021-05-17T23:22:59.921Z]   cb::mcbp::Status::NotMyVbucket
[2021-05-17T23:22:59.921Z]     Which is: I"m not responsible for this vbucket
[2021-05-17T23:22:59.921Z]   getRsp.getStatus()
[2021-05-17T23:22:59.921Z]     Which is: Not found
[2021-05-17T23:22:59.921Z] [  FAILED  ] TransportProtocols/SaslTest.CollectionsConnectionSetup/Mcbp, where GetParam() = Mcbp (25 ms)
TransportProtocols/SaslTest.CollectionsConnectionSetup/Mcbp
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/10531/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/18482/ : FAILURE

Failure of GoogleTest "TransportProtocols/SaslTest.CollectionsConnectionSetup/Mcbp":

<pre>
[ RUN      ] TransportProtocols/SaslTest.CollectionsConnectionSetup/Mcbp
[2021-05-17T23:57:24.373Z] ../kv_engine/tests/testapp/testapp_sasl.cc:325: Failure
[2021-05-17T23:57:24.373Z] Expected equality of these values:
[2021-05-17T23:57:24.373Z]   cb::mcbp::Status::NotMyVbucket
[2021-05-17T23:57:24.373Z]     Which is: I"m not responsible for this vbucket
[2021-05-17T23:57:24.373Z]   getRsp.getStatus()
[2021-05-17T23:57:24.373Z]     Which is: Not found
[2021-05-17T23:57:24.373Z] [  FAILED  ] TransportProtocols/SaslTest.CollectionsConnectionSetup/Mcbp, where GetParam() = Mcbp (54 ms)
TransportProtocols/SaslTest.CollectionsConnectionSetup/Mcbp
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/18482/ )

One of more core files found at the end of the build. Data for post-mortem saved to archived_core_dumps.tar.bz2 under "Build Artifacts". ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/18482/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/7530/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/30633/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/9600/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/10931/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/10672/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Scott Lashley
Date: 2021-05-19 04:13:25.000000000
Message: 
Abandoned
----------------------------------------------------------------------------------------------------------------------
